[gd_scene load_steps=8 format=3 uid="uid://bqp4id5eusiud"]

[ext_resource type="Script" path="res://scripts/statistics.gd" id="1_3h1u4"]
[ext_resource type="LabelSettings" uid="uid://r2h2pmcd4rmp" path="res://fonts/font_settings.tres" id="1_038dx"]
[ext_resource type="Script" path="res://scripts/scroll_container.gd" id="3_0jui7"]
[ext_resource type="FontFile" uid="uid://dykx4mffqvb0r" path="res://fonts/Shentox-Regular (RUS by Slavchansky)_0.ttf" id="4_wmslg"]

[sub_resource type="Animation" id="Animation_pns85"]
resource_name = "PLAY"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vlwil"]
resource_name = "RESET"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0j2on"]
_data = {
"PLAY": SubResource("Animation_pns85"),
"RESET": SubResource("Animation_vlwil")
}

[node name="Statistics" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3h1u4")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0j2on")
}

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1440.0
offset_top = -810.0
offset_right = 1440.0
offset_bottom = 810.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 0.117647, 0.117647, 0.745098)

[node name="LabelStatistics" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -480.0
offset_top = 10.0
offset_right = 480.0
offset_bottom = 44.0
grow_horizontal = 2
size_flags_horizontal = 4
text = "$Statistics"
label_settings = ExtResource("1_038dx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.888889
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_0jui7")
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="ScrollContainer"]
custom_minimum_size = Vector2(960, 470)
layout_mode = 2
size_flags_horizontal = 6

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/Control"]
layout_mode = 0
offset_left = 300.0
offset_top = -2.0
offset_right = 660.0
offset_bottom = 2.0

[node name="Label2D" type="Label" parent="ScrollContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -235.0
offset_right = 32.0
offset_bottom = -201.0
grow_horizontal = 2
grow_vertical = 2
text = "$Classic"
label_settings = ExtResource("1_038dx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/Control"]
layout_mode = 0
offset_left = 300.0
offset_top = 31.0
offset_right = 660.0
offset_bottom = 35.0

[node name="Statistics2D" type="Control" parent="ScrollContainer/Control"]
anchors_preset = 0
offset_left = 300.0
offset_top = 44.0
offset_right = 660.0
offset_bottom = 230.0

[node name="LabelBestScore" type="Label" parent="ScrollContainer/Control/Statistics2D"]
layout_mode = 2
offset_right = 108.0
offset_bottom = 34.0
text = "$Best_score:"
label_settings = ExtResource("1_038dx")
vertical_alignment = 1

[node name="BestScore" type="Label" parent="ScrollContainer/Control/Statistics2D"]
layout_direction = 3
layout_mode = 1
offset_right = 12.0
offset_bottom = 34.0
text = "-"
label_settings = ExtResource("1_038dx")
vertical_alignment = 1

[node name="LabelGamesPlayed" type="Label" parent="ScrollContainer/Control/Statistics2D"]
layout_mode = 0
offset_top = 38.0
offset_right = 124.0
offset_bottom = 72.0
text = "$Games_played:"
label_settings = ExtResource("1_038dx")
vertical_alignment = 1

[node name="GamesPlayed" type="Label" parent="ScrollContainer/Control/Statistics2D"]
layout_direction = 3
layout_mode = 1
offset_top = 38.0
offset_right = 12.0
offset_bottom = 72.0
text = "-"
label_settings = ExtResource("1_038dx")
vertical_alignment = 1

[node name="LabelGamesWon" type="Label" parent="ScrollContainer/Control/Statistics2D"]
layout_mode = 0
offset_top = 76.0
offset_right = 108.0
offset_bottom = 110.0
text = "$Games_won:"
label_settings = ExtResource("1_038dx")
vertical_alignment = 1

[node name="GamesWon" type="Label" parent="ScrollContainer/Control/Statistics2D"]
layout_direction = 3
layout_mode = 0
offset_top = 76.0
offset_right = 12.0
offset_bottom = 110.0
text = "-"
label_settings = ExtResource("1_038dx")
vertical_alignment = 1

[node name="LabelGamesLost" type="Label" parent="ScrollContainer/Control/Statistics2D"]
layout_mode = 0
offset_top = 114.0
offset_right = 108.0
offset_bottom = 148.0
text = "$Games_lost:"
label_settings = ExtResource("1_038dx")
vertical_alignment = 1

[node name="GamesLost" type="Label" parent="ScrollContainer/Control/Statistics2D"]
layout_direction = 3
layout_mode = 0
offset_top = 114.0
offset_right = 12.0
offset_bottom = 148.0
text = "-"
label_settings = ExtResource("1_038dx")
vertical_alignment = 1

[node name="LabelBrokenLayers" type="Label" parent="ScrollContainer/Control/Statistics2D"]
layout_mode = 0
offset_top = 152.0
offset_right = 128.0
offset_bottom = 186.0
text = "$Broken_layers:"
label_settings = ExtResource("1_038dx")
vertical_alignment = 1

[node name="BrokenLayers" type="Label" parent="ScrollContainer/Control/Statistics2D"]
layout_direction = 3
layout_mode = 0
offset_top = 152.0
offset_right = 12.0
offset_bottom = 186.0
text = "-"
label_settings = ExtResource("1_038dx")
vertical_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="ScrollContainer/Control"]
layout_mode = 0
offset_left = 300.0
offset_top = 238.0
offset_right = 660.0
offset_bottom = 242.0

[node name="Label3D" type="Label" parent="ScrollContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = 5.0
offset_right = 18.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
text = "$3D"
label_settings = ExtResource("1_038dx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="ScrollContainer/Control"]
layout_mode = 0
offset_left = 300.0
offset_top = 271.0
offset_right = 660.0
offset_bottom = 275.0

[node name="Statistics3D" type="Control" parent="ScrollContainer/Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 300.0
offset_top = 284.0
offset_right = 660.0
offset_bottom = 470.0

[node name="LabelBestScore" type="Label" parent="ScrollContainer/Control/Statistics3D"]
layout_mode = 2
offset_right = 108.0
offset_bottom = 34.0
text = "$Best_score:"
label_settings = ExtResource("1_038dx")
vertical_alignment = 1

[node name="BestScore" type="Label" parent="ScrollContainer/Control/Statistics3D"]
layout_direction = 3
layout_mode = 0
offset_right = 12.0
offset_bottom = 34.0
text = "-"
label_settings = ExtResource("1_038dx")
vertical_alignment = 1

[node name="LabelGamesPlayed" type="Label" parent="ScrollContainer/Control/Statistics3D"]
layout_mode = 0
offset_top = 38.0
offset_right = 124.0
offset_bottom = 72.0
text = "$Games_played:"
label_settings = ExtResource("1_038dx")
vertical_alignment = 1

[node name="GamesPlayed" type="Label" parent="ScrollContainer/Control/Statistics3D"]
layout_direction = 3
layout_mode = 0
offset_top = 38.0
offset_right = 12.0
offset_bottom = 72.0
text = "-"
label_settings = ExtResource("1_038dx")
vertical_alignment = 1

[node name="LabelGamesWon" type="Label" parent="ScrollContainer/Control/Statistics3D"]
layout_mode = 0
offset_top = 76.0
offset_right = 108.0
offset_bottom = 110.0
text = "$Games_won:"
label_settings = ExtResource("1_038dx")
vertical_alignment = 1

[node name="GamesWon" type="Label" parent="ScrollContainer/Control/Statistics3D"]
layout_direction = 3
layout_mode = 0
offset_top = 76.0
offset_right = 12.0
offset_bottom = 110.0
text = "-"
label_settings = ExtResource("1_038dx")
vertical_alignment = 1

[node name="LabelGamesLost" type="Label" parent="ScrollContainer/Control/Statistics3D"]
layout_mode = 0
offset_top = 114.0
offset_right = 108.0
offset_bottom = 148.0
text = "$Games_lost:"
label_settings = ExtResource("1_038dx")
vertical_alignment = 1

[node name="GamesLost" type="Label" parent="ScrollContainer/Control/Statistics3D"]
layout_direction = 3
layout_mode = 0
offset_top = 114.0
offset_right = 12.0
offset_bottom = 148.0
text = "-"
label_settings = ExtResource("1_038dx")
vertical_alignment = 1

[node name="LabelBrokenLayers" type="Label" parent="ScrollContainer/Control/Statistics3D"]
layout_mode = 0
offset_top = 152.0
offset_right = 128.0
offset_bottom = 186.0
text = "$Broken_layers:"
label_settings = ExtResource("1_038dx")
vertical_alignment = 1

[node name="BrokenLayers" type="Label" parent="ScrollContainer/Control/Statistics3D"]
layout_direction = 3
layout_mode = 0
offset_top = 152.0
offset_right = 12.0
offset_bottom = 186.0
text = "-"
label_settings = ExtResource("1_038dx")
vertical_alignment = 1

[node name="ButtonClose" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -50.0
offset_right = 60.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("4_wmslg")
theme_override_font_sizes/font_size = 16
text = "$Close"

[connection signal="pressed" from="ButtonClose" to="." method="_on_button_close_pressed"]
